--- a/Rofhiwa_Mashao.ipynb
+++ b/Rofhiwa_Mashao.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGCEE5MHaYfTvK1/sx2QYP"
+      "authorship_tag": "ABX9TyN65TBL95qpNe0H5Ofx5Iac"
     },
     "kernelspec": {
       "name": "python3",
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "iiS_XxGJmyPg"
       },
@@ -66,17 +66,16 @@
         "  def total_budget(self) -> float:\n",
         "    return self.members * self.budget_per_person\n",
         "\n",
+        "@dataclass\n",
         "class TourismExperience:\n",
+        "  code:str\n",
+        "  title:str\n",
+        "  base_price: float\n",
+        "  capacity: int\n",
         "\n",
-        "  def __init__(self, code: str, title: str, base_price: float, capacity: int):\n",
-        "    self.code = code\n",
-        "    self.title = title\n",
-        "    self.base_price = base_price\n",
-        "    self.capacity = capacity\n",
-        "\n",
-        "    # Seasonal_price: mapping season -> multiplier ( e.g., high: 1.2)\n",
-        "    self.seasonal_price = {'low': 0.9, 'high': 1.2}\n",
-        "    self.booked_spots: int = 0\n",
+        "  # Seasonal_price: mapping season -> multiplier ( e.g., high: 1.2)\n",
+        "  seasonal_price: Dict[str,float]=field(default_factory= lambda:{'low': 0.9, 'high': 1.2})\n",
+        "  booked_spots: int = 0\n",
         "\n",
         "  def get_price(self, season: str = 'mid') -> float:\n",
         "    multiplier = self.seasonal_price.get(season, 1)\n",
@@ -90,30 +89,29 @@
         "      raise AvailabilityError(f\"Not enough availability on {self.title}.\")\n",
         "    self.booked_spots += num_people\n",
         "\n",
+        "@dataclass\n",
         "class safari(TourismExperience):\n",
-        "  def __init__(self, code: str, title: str, base_price: float, capacity: int, animals: List[list]):\n",
-        "    super().__init__(code, title, base_price, capacity)\n",
-        "    self.animals = animals\n",
+        "  animals: List[str] = field(default_factory= list)\n",
         "\n",
+        "@dataclass\n",
         "class BeachHoliday(TourismExperience):\n",
-        "  def __init__(self, code: str, title: str, base_price: float, capacity: int, location: str):\n",
-        "    super().__init__(code, title, base_price, capacity)\n",
-        "    self.location = location\n",
+        "  location: str = \"\"\n",
         "\n",
+        "@dataclass\n",
         "class CulturalTour(TourismExperience):\n",
-        "  def __init__(self, code: str, title: str, base_price: float, capacity: int, theme: str):\n",
-        "    super().__init__(code, title, base_price, capacity)\n",
-        "    self.theme = theme\n",
+        "  theme: str =\"\"\n",
         "\n",
+        "@dataclass\n",
         "class Package:\n",
         "  \"\"\"\n",
         "  A tourism package which may include experience from single or multiple countries\"\"\"\n",
         "\n",
-        "  def __init__(self, package_id: str, experiences: List[TourismExperience], countries: List[Country]):\n",
-        "    self.package_id = package_id\n",
-        "    self.experiences = experiences\n",
-        "    self.countries = countries\n",
-        "    self.bookings: Dict[str, int] = {}\n",
+        "  package_id: str\n",
+        "  experiences: List[TourismExperience]\n",
+        "  countries: List[Country]\n",
+        "  experiences: List[TourismExperience]\n",
+        "  bookings: Dict[str, int] = field(default_factory=dict)\n",
+        "\n",
         "\n",
         "  def total_price_per_person(self, season: str = 'mid') -> float:\n",
         "    return round(sum(exp.get_price(season) for exp in self.experiences),2)\n",
@@ -154,7 +152,7 @@
       "metadata": {
         "id": "hvYYtInr09t-"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -208,9 +206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ix4u3NaQt-as",
-        "outputId": "e43a408a-c3c1-4fcf-c264-4363282d59e1"
+        "outputId": "0c154730-3771-4a3f-ebea-7e59413e58ed"
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
