--- a/Rofhiwa_Mashao.ipynb
+++ b/Rofhiwa_Mashao.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN65TBL95qpNe0H5Ofx5Iac"
+      "authorship_tag": "ABX9TyMZnkQ6eJQCC6N+JkKR1/mF"
     },
     "kernelspec": {
       "name": "python3",
@@ -196,7 +196,7 @@
         "\n",
         "  try:\n",
         "    total_cost = package.book_for_group(group, season = 'high')\n",
-        "    print(f\"Booking successful! Total cost: {total_cost}\")\n",
+        "    print(f\"Booking successful! Total cost:R{total_cost}\")\n",
         "\n",
         "  except (AvailabilityError, ValidationError) as e:\n",
         "    print(\"Booking failed\", e)"
@@ -206,15 +206,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ix4u3NaQt-as",
-        "outputId": "0c154730-3771-4a3f-ebea-7e59413e58ed"
+        "outputId": "13376565-6f17-4217-c0a2-91c97af74496"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Booking successful! Total cost: 5390.0\n"
+            "Booking successful! Total cost:R5390.0\n"
           ]
         }
       ]
